# atoVM

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  lexer.cc  lexer.h  main.cc  prelude.h
src/codegen/: instructions.h  optimizer.cc  optimizer.h
src/interpreter/: x86_state.cc  x86_state.h
src/jit/: swag.cc  swag.h
src/translators/: translator_bf.cc  translator_bf.h  translator_c.cc  translator_c.h
